Alterando descrição do meu texto em HTML

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,12 @@
                 <div class="container">
                     <h1> Bem vindo a minha página</h1> 
                     <p>
-                        Integer cursus libero eget metus fermentum ultrices. In sed dignissim erat. Phasellus pharetra ante vitae gravida porttitor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla commodo et nisl a sodales. Nullam id volutpat urna. Quisque vel vulputate orci. Nunc condimentum ut massa non eleifend.
+                        Este foi meu primeiro curso em HTML com css
+                        estou integrando todos os curso disponibizados pela Udemy gratuitamente e a meta é, ao fínal do mês de 
+                        março estar começando a utilizar Javascript, tudo isso a fim de realizar o TG. <br/>
+                        <p>Todos os dias irei fazer os cursos depois do horário da faculdade. Das 09 às 18 trabalho,
+                            19 às 22 faculdade e, por volta das 23:00 até 02:00 Cursos
+                        </p>
                     </p>
                 </div>
             </div>
