Correção de pontuação

--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
                         estou integrando todos os curso disponibizados pela Udemy gratuitamente e a meta é, ao fínal do mês de 
                         março estar começando a utilizar Javascript, tudo isso a fim de realizar o TG. <br/>
                         <p>Todos os dias irei fazer os cursos depois do horário da faculdade. Das 09 às 18 trabalho,
-                            19 às 22 faculdade e, por volta das 23:00 até 02:00 Cursos
+                            19 às 22 faculdade e, por volta das 23:00 até 02:00 Cursos. 
                         </p>
                     </p>
                 </div>
